Change class in css to make style take effect (and prevent text overlapping legend)

--- a/src/calendar-heatmap-mini.css
+++ b/src/calendar-heatmap-mini.css
@@ -1,5 +1,5 @@
 text.month-name,
-text.calendar-heatmap-legend-text,
+text.calendar-heatmap-mini-legend-text,
 text.day-initial {
     font-family: 'Open Sans', sans-serif;
     font-size: 10px;
